Adds parsing / serialization of IP rules
